[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mycoolpackage_cccaaa"
authors = [
    name="Henry George", email="henrygeorge@example.com" },
]
description = "This package lets you add 1 to a given number"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""